--- a/app/views/manifestations/_title.html.erb
+++ b/app/views/manifestations/_title.html.erb
@@ -2,6 +2,9 @@
   <h2 class="resource_title">
     [M]
     <%= link_to title_with_volume_number(manifestation), manifestation, itemprop: 'name' -%>
+    <% if manifestation.periodical? %>
+      <%= image_tag('icons/newspaper.png', size: '16x16', alt: t('manifestation.serial')) -%>
+    <%- end -%>
     <%= link_to form_icon(manifestation.carrier_type), manifestation -%>
   </h2>
   <p>
