--- a/app/views/manifestations/_show_detail_librarian.html.erb
+++ b/app/views/manifestations/_show_detail_librarian.html.erb
@@ -70,9 +70,11 @@
           <tr>
             <td><%= t('page.identifier') -%>:</td>
             <td>
-              <% manifestation.identifiers.each do |identifier| %>
-                <%= "#{identifier.identifier_type.display_name.localize}: #{identifier.body}" %>
-              <% end %>
+              <ul>
+                <% manifestation.identifiers.each do |identifier| %>
+                  <li><%= identifier.identifier_type.display_name.localize, identifier_link(identifier) %></li>
+                <% end %>
+              </ul>
             </td>
           </tr>
         <%- end -%>
