--- a/app/views/manifestations/_show_detail_librarian.html.erb
+++ b/app/views/manifestations/_show_detail_librarian.html.erb
@@ -72,7 +72,10 @@
             <td>
               <ul>
                 <% manifestation.identifiers.each do |identifier| %>
-                  <li><%= identifier.identifier_type.display_name.localize, identifier_link(identifier) %></li>
+                  <li>
+                    <%= identifier.identifier_type.display_name.localize %>:
+                    <%= identifier_link(identifier) %>
+                  </li>
                 <% end %>
               </ul>
             </td>
