--- a/app/views/manifestations/show.html.erb
+++ b/app/views/manifestations/show.html.erb
@@ -59,7 +59,7 @@
               <% if @manifestation.is_reservable_by?(current_user) %>
                 <li><%= link_to_reservation(@manifestation, @reserve) %>
                 <br />
-                (<%= t('page.number_of_reservations', count: @reserved_count) -%>)</li>
+                (<%= link_to_if(current_user.has_role?('Librarian'), t('page.number_of_reservations', count: @reserved_count), reserves_path(query: "manifestation_id_i:#{@manifestation.id}")) -%>)</li>
               <%- else -%>
                 <% if defined?(EnjuPurchaseRequest) %>
                   <li><%= link_to t('activerecord.models.purchase_request'), new_purchase_request_path(purchase_request: {url: manifestation_url(@manifestation)}) %></li>
