--- a/app/views/page/_footer.html.erb
+++ b/app/views/page/_footer.html.erb
@@ -7,7 +7,7 @@
     Developed by <a href="https://github.com/nabeta">Kosuke Tanabe</a> and <a href="http://www.next-l.jp/">Project Next-L</a> | 
     <%= link_to t('page.report_bugs'), "https://github.com/next-l/enju_leaf/issues" -%> |
     <%= link_to t('page.manual'), "https://next-l.github.io/manual/" %>
-    <% if is_mobile_request? %>
+    <% if browser.mobile? %>
       | <%= link_to t('page.mobile_view'), url_for(mobile_view: 'true') %>
     <% end %>
   </div>
