--- a/app/views/manifestations/_show_holding.html.erb
+++ b/app/views/manifestations/_show_holding.html.erb
@@ -15,7 +15,7 @@
   <% else %>
     <% items = manifestation.items.for_checkout.on_shelf %>
   <% end %>
-  <%- items.each do |item| -%>
+  <%- items.sort_by{|i| holding_item_sort_criteria(i) }.each do |item| -%>
     <tr>
       <td>
         <%- if item.item_identifier? -%>
