--- a/app/views/manifestations/index.html.erb
+++ b/app/views/manifestations/index.html.erb
@@ -29,9 +29,9 @@
   <%- if @manifestations.total_count > 0 -%>
     <p>
       <%= t('page.number_of_search_results', count: @count[:query_result], numdocs: Manifestation.search.total, seconds: sprintf("%.3f", @seconds)) -%>
-      <% if @count[:query_result] > ENV['ENJU_MAX_NUMBER_OF_RESULTS'] %>
+      <% if @count[:query_result] > @max_number_of_results %>
         <br />
-        <%= t('page.limit_exceeded', count: ENV['ENJU_MAX_NUMBER_OF_RESULTS'] %>
+        <%= t('page.limit_exceeded', count: @max_number_of_results) %>
       <%- end -%>
     </p>
 
