--- a/app/views/manifestations/_pub_year_facet.html.erb
+++ b/app/views/manifestations/_pub_year_facet.html.erb
@@ -2,10 +2,10 @@
 <ul>
   <%- @pub_year_facet.each do |facet| -%>
     <li>
-      <%= pub_year_facet(params[:pub_date_from].to_s, params[:pub_date_to].to_s, facet) %>
+      <%= pub_year_facet(params[:pub_date_from].to_s, params[:pub_date_until].to_s, facet) %>
     </li>
   <%- end -%>
-  <%- if params[:pub_date_from] and params[:pub_date_to] -%>
-    <li><%= link_to t('page.remove_this_facet'), url_for(params.merge(pub_date_from: nil, pub_date_to: nil, page: nil, view: nil, only_path: true)) -%></li>
+  <%- if params[:pub_date_from] and params[:pub_date_until] -%>
+    <li><%= link_to t('page.remove_this_facet'), url_for(params.merge(pub_date_from: nil, pub_date_until: nil, page: nil, view: nil, only_path: true)) -%></li>
   <%- end -%>
 </ul>
