--- a/app/views/manifestations/_show_creators.html.erb
+++ b/app/views/manifestations/_show_creators.html.erb
@@ -15,3 +15,8 @@
   <%- if manifestation.pub_date.present? -%>
     (<%= manifestation.pub_date -%>)
   <%- end -%>
+  <% if defined?(EnjuSubject) %>
+    <% manifestation.classifications.each do |classification| %>
+      <%= link_to "#{classification.classification_type.display_name.localize}: #{classification.category}", manifestations_path(query: "classification_sm:#{classification.classification_type.name}_#{classification.category}") %>
+    <% end %>
+  <% end %>
