--- a/app/views/manifestations/_manifestation.html.erb
+++ b/app/views/manifestations/_manifestation.html.erb
@@ -34,12 +34,11 @@
                   <% if manifestation.is_reservable_by?(current_user) %>
                     <%- reserve = manifestation.is_reserved_by?(current_user) -%>
                     <%- if reserve -%>
-                      <%= link_to t('reserve.show'), reserve -%>
+                      <%= link_to t('reserve.show'), reserve -%><br />
                     <%- else -%>
-                      <%= link_to t('activerecord.models.reserve'), new_reserve_path(manifestation_id: manifestation.id) if can? :create, Reserve -%>
+                      <%= link_to t('activerecord.models.reserve'), new_reserve_path(manifestation_id: manifestation.id) if can? :create, Reserve -%><br />
                     <%- end -%>
                   <% end %>
-                  <br />
                 <% end %>
               <% end %>
               <%- if can? :update, manifestation -%>
