--- a/app/views/manifestations/_show_series_detail.html.erb
+++ b/app/views/manifestations/_show_series_detail.html.erb
@@ -7,6 +7,9 @@
         <%= series_statement.original_title %>
       <% end %>
       <%= series_statement.volume_number_string %>
+      <% unless series_statement.creator_string.blank? %>
+        (<%= series_statement.creator_string %>)
+      <% end %>
     </li>
   <% end %>
 </ul>
