--- a/app/views/manifestations/show.html.erb
+++ b/app/views/manifestations/show.html.erb
@@ -78,5 +78,6 @@
       <%- if current_user.try(:has_role?, 'Librarian') -%>
         <%= render 'manifestations/edit_detail' %>
       <% end %>
+      <%= render 'manifestations/export' %>
   </div>
 </div>
