--- a/app/views/manifestations/_holding.html.erb
+++ b/app/views/manifestations/_holding.html.erb
@@ -1,3 +1,7 @@
 <div class="holding_index" id="holding_<%= manifestation.id -%>" style="display: none">
-  <%= render 'manifestations/show_holding', manifestation: manifestation -%>
+  <% if current_user.try(:has_role?, 'Librarian') %>
+    <%= render 'manifestations/show_holding', manifestation: manifestation, items: manifestation.items -%>
+  <% else %>
+    <%= render 'manifestations/show_holding', manifestation: manifestation, items: manifestation.items.for_checkout.on_shelf -%>
+  <% end %>
 </div>
